<resources>
    <string name="app_name">Issue Mine</string>
    <string name="title_activity_user_home">User_home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="Application">Send Application</string>
    <string name="Feedback">Send Feedback</string>
    <string name="Chat">Chat</string>
    <string name="Policies">Project And Policies</string>
    <string name="Issues">Adding Issues</string>
    <string name="Notification">Notification</string>
    <string name="Rating">Rating</string>
    <string name="About">About</string>
</resources>
