<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_application"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/Application" />
        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/Feedback" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Chat" />

        <item
            android:id="@+id/nav_issues"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/Issues" />
        <item
            android:id="@+id/nav_policies"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Policies" />
        <item
            android:id="@+id/nav_notification"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/Notification" />
        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/Rating" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/About" />
    </group>

<!--    <item android:title="Communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_menu_share"-->
<!--                android:title="@string/menu_share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_send"-->
<!--                android:icon="@drawable/ic_menu_send"-->
<!--                android:title="@string/menu_send" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
